微课堂微信小程序

--- a/project.config.json
+++ b/project.config.json
@@ -24,7 +24,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.11.0",
-	"appid": "wxb72883506ff10026",
+	"appid": "wx56b65a34a2a25bd3",
 	"projectname": "%E7%BB%B4%E5%85%8B%E6%89%98",
 	"debugOptions": {
 		"hidedInDevtools": []
